13/07/2005 0.0.31
- yahoo.lua: Fixed an issue where the yahoo new mail indicator wasn't being reset after a session. Also, fixed an error when a yahoo session expires and it regenerates the base url in STAT. (russell822)
- juno.lua: Added the resetheaders parameter to turn off full headers during QUIT. Also, removed the sorting options from the message list which aren't needed. (russell822)
- es: *** empty log message *** (lisar314)
- es, fr: changed gentoo (no more ebuild provided) (gareuselesinge)
- fr: *** empty log message *** (fvancaen)
- mailcom.lua: added domain 'italymail.com' to mailcom.lua plugin (alessiofender)
- added patch for libero.it (thanks Oreste Salerno)
- Gentoo init script now uses -s option to drop privileges (by Daniel Black)
- fixed std file permissions in the tarball (should help Gentoo)
- fixed debian init script
- fixed error message if you type just quit (thanks rami)
- luabind and curl_lua are now double licensed under GPL and MIT to make the
LUA community happy.
29/06/2005 0.0.30
- removed luafull
- moved xml2tex to modules/ and now is executed with -e (no more luafull)
- mail2world.lua is now official
- fixed libero multipage stat
- aol.lua, mailcom.lua: changed homepage to http://www.freepops.org (alessiofender)
- es: *** empty log message *** (lisar314)
- fr: *** empty log message *** (fvancaen)
- aol.lua: fixed aol change to aol.com domain (russell822)
- mailcom.lua: A small tweak to fix minor received: header line issues with tabs being replaced by nothing when they should be replaced by a space. (russell822)
- gmail.lua: language fixes (ncocchiaro)
- es, fr: fix (gareuselesinge)
- gmail.lua: Updated the URL's to reflect gmail's changes and changed the require version so that ssl errors don't appear from a bad curl dependency. (russell822)
- gmail.lua: Fixed few conversation bugs, and added the getnew feature. (rkattan)
- gmail.lua: Fixed few bugs due to changes in gmail web pages (rkattan)