@@ -1,4 +1,5 @@
 13/07/2005 0.0.31
+- fixed config.lua com.uk -> co.uk
 - yahoo.lua: Fixed an issue where the yahoo new mail indicator wasn't being reset after a session. Also, fixed an error when a yahoo session expires and it regenerates the base url in STAT. (russell822)
 - juno.lua: Added the resetheaders parameter to turn off full headers during QUIT. Also, removed the sorting options from the message list which aren't needed. (russell822)
 - es: *** empty log message *** (lisar314)
